--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="/image/im.png">
 </head>
 <body>
     <div class="header-image">
